Version 0.5.4
--------------
Change: The "nice names" for binsearch.info have been simplified. Thanks to "thibaut....@gmail.com" for this.

Version 0.5.3
--------------
Feature: New option to enable automatic authentication. This feature automatically provides your SABnzbd username & password to SABnzbd through URL parameters so you don't have to type in your username & password manually when you click the "Open SABnzbd" button in the popup. Enabled by default.
Change: If options are changed in the extension, tabs currently open for indexer sites automatically pick up those changes. Previously the website had to be refreshed by the user to pick up changes in options (such as nzbxxx username & api key).

Version 0.5.2
--------------
Bugfix: X-DNZB-Category was not working on compatible sites.
Bugfix: NZBmatrix was not working in iframes (Issue 60)

Version 0.5.1
--------------
Change: Fresh new icon (the smaller 16x16 icon remains the same)
Change: 'Notification Timeout' setting now defaults to 10 seconds (previously defaulted to Disabled).
Bugfix: (Regression) 'Enable Context Menu' option was not working.
Bugfix: (Regression) binsearch.info wasn't working.
Bugfix: Renamed the display options check boxes in settings to mean the reverse of what they meant before (i.e. Keeping them checked actually enables nice display names).
Bugfix: (Regression) 'Pause Queue' popup option was missing.

Version 0.5.0
--------------
Feature: "Send link to SABnzbd" link added to chrome context menu for http links. Note that this feature is not intended to be used on links that will require authentication.
Feature: New setting in options page to enable/disable the new context menu.
Feature: Added support for fanzub
Feature: Completely redesigned Options page
Change: Removed newzleech support since that website is down.
Change: Extreme architecture change that fixes many bugs and improves stability.
Bugfix: Fixed continuous memory leaks happening during refreshes.