@@ -1,6 +1,7 @@
 Version 0.5.4
 --------------
 Change: The "nice names" for binsearch.info have been simplified. Thanks to "thibaut....@gmail.com" for this.
+Change: The Categories section of the Configuration tab in Options now has a summary paragraph with a link to the Categories wiki page on our Google Code project page.
 
 Version 0.5.3
 --------------
